--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.56.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^4.19.1"
   }
 }
