--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^6.5.0",
+    "@react-three/drei": "^9.46.7",
+    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/three": "^0.146.0",
     "json-server": "^0.17.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "sass": "^1.56.1",
+    "three": "^0.147.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
