--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.46.7",
     "@react-three/fiber": "^8.9.1",
@@ -10,6 +11,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/three": "^0.146.0",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.11.3",
     "json-server": "^0.17.0",
     "react": "^18.1.0",
