--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.56.1",
     "three": "^0.147.0",
     "web-vitals": "^0.2.4"
