--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-task-tracker",
+  "name": "shootingstarsgarden tarot",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.1.0",
+    "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
